Switch to building from source and remove precompiled binary

--- a/calendarrr.desktop
+++ b/calendarrr.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=Calendarrr
 Comment=A minimal calendar application built using GTK for XFCE
-Exec=/usr/local/bin/calendarrr
+Exec=calendarrr
 Icon=calendarrr-outlined
 Terminal=false
 Categories=Utility;Application;
